# Gioco_Dell_Oca_C

./: .gitignore  README.md
Il Gioco dell'Oca/: .cproject  .project  CMakeLists.txt
Il Gioco dell'Oca/src/: .project  Gioco dell'oca - GRUPPO 1.c  aiuto.c  aiuto.h  casella.c  casella.h  classifica.c  classifica.h  costanti.h  generare_numero_casuale.c  generare_numero_casuale.h  generare_percorso.c  generare_percorso.h  gestire_partita.c  gestire_partita.h  gestire_stampa.c  gestire_stampa.h  giocatore.c  giocatore.h  inizializzare_partita.c  inizializzare_partita.h  partita.c  partita.h  salvare_caricare_partita.c  salvare_caricare_partita.h  stampare_percorso.c  stampare_percorso.h  vincitore.c  vincitore.h
Il Gioco dell'Oca/src/interfacce/: INDICE INTERFACCE.txt  file_cambio_turno.txt  file_caricamento_fallito.txt  file_caricamento_riuscito.txt  file_classifica.txt  file_conferma_salvataggio.txt  file_crediti.txt  file_dettagli_partita.txt  file_easteregg1.txt  file_easteregg2.txt  file_intro.txt  file_manuale.txt  file_menu_aiuto.txt  file_menu_carica_partita.txt  file_menu_di_gioco.txt  file_menu_principale.txt  file_percorso.txt  file_regole.txt  file_richiesta_uscita.txt  file_scelta_g_iniziale.txt  file_scelta_lung_perco.txt  file_scelta_n_giocatori.txt  file_scelta_nome_partita.txt  file_scelta_nomi_giocatori.txt  file_scelta_slot_salvare_partita.txt  file_schermata_labirinto.txt  file_schermata_lancio_dadi_prigione.txt  file_schermata_locanda.txt  file_schermata_locanda_turno_passato.txt  file_schermata_oca.txt  file_schermata_perm_pozzo.txt  file_stampe.txt  (+7 more)
(+52 files in other folders)
